--- a/PAUP_QA-master/QA/Views/App/Index.cshtml
+++ b/PAUP_QA-master/QA/Views/App/Index.cshtml
@@ -57,7 +57,7 @@
     function LoadingRow() {
         $("#questionList").empty();
 
-        $("#questionList").append('<div class="question-box"><div class="question-text">Pretraga u tijeku...</div></div>');
+        $("#questionList").append('<div class="question-box"><div class="question-text" style="text-align:center;">Pretraga u tijeku...</div></div>');
 
         // $("#pager").empty();
     }
