--- a/PAUP_QA-master/QA/Views/Korisnik/ResetLozinke.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/ResetLozinke.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewBag.Title = "Ažuriranje lozinke";
     Layout = null;
+    AjaxOptions ajaxOpt = new AjaxOptions()
+    {
+        HttpMethod = "POST",
+        OnSuccess = "prozor"
+    };
 }
 
 <!DOCTYPE html>
@@ -14,17 +19,43 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <div id="sakrij">
+    </div>
     <header>
         <nav>
             <ul>
-                <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
+                @if (TempData["dosaoSa"] != null)
+                {
+                    <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
+                }
             </ul>
         </nav>
     </header>
     <section class="body">
         <section class="form-section">
+            <div id="poruka">
+                <div id="poruka_zaglavlje">
+                    @if (TempData["dosaoSa"] == null)
+                    {
+                        <a href='@Url.Action("Index", "App")'>
+                            <span id="zatvori">&times;</span>
+                        </a>
+                    }
+                    else
+                    {
+                        <a href='@TempData["dosaoSa"]'>
+                            <span id="zatvori">&times;</span>
+                        </a>
+                    }
+                </div>
+                <div id="poruka_tekst"></div>
+            </div>
             <h1>@ViewBag.Title</h1>
-            @using (Html.BeginForm("ResetLozinke", "Korisnik", FormMethod.Post, new { @class = "login-form" }))
+            @using (Ajax.BeginForm("ResetLozinke", "Korisnik", ajaxOpt, new { @class = "login-form" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(m => m.KorisnickoIme)
@@ -34,7 +65,7 @@
                 @Html.LabelFor(m => m.Lozinka2)
                 @Html.PasswordFor(model => model.Lozinka2, new { @placeholder = "Ponovite lozinku..." })
                 @Html.ValidationMessageFor(m => m.Lozinka2, "", new { @class = "validacija" })
-                <button name="resetLoz" type="submit">
+                <button name="resetLoz" type="submit" id="resetLoz">
                     Reset
                 </button>
             }
@@ -42,6 +73,21 @@
     </section>
 </body>
 </html>
+<script type="text/javascript">
+    function prozor() {
+            var poruka = document.getElementById("poruka");
+        document.getElementById("poruka_tekst").innerHTML = "<span id='kvacica-azuriraj'>&#x2714;</span> <br> Lozinka uspješno resetirana!";
+        document.getElementById("poruka_tekst").style.lineHeight = "80px";
+        poruka.classList.add("fadein");
+        poruka.style.zIndex = 3;
+        var sakrij = document.getElementById("sakrij");
+        sakrij.setAttribute("class", "sakrij");
+        var tipka = document.getElementById("resetLoz");
+        tipka.disabled = "disabled";
+    }
+
+
+</script>
 @Styles.Render("/Content/style.css")
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
