--- a/PAUP_QA-master/QA/Views/Korisnik/DodajKorisnika.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/DodajKorisnika.cshtml
@@ -3,6 +3,12 @@
 @{
     ViewBag.Title = "Novi korisnik";
     Layout = null;
+    AjaxOptions ajaxOpt = new AjaxOptions()
+    {
+        HttpMethod = "POST",
+        OnSuccess = "prozor",
+        OnFailure = "prozorFail"
+    };
 }
 
 <!DOCTYPE html>
@@ -14,17 +20,43 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
+    <div id="sakrij">
+    </div>
     <header>
         <nav>
             <ul>
-                <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
+                @if (TempData["dosaoSa"] != null)
+                {
+                    <li><a href='@TempData["dosaoSa"]'>Povratak</a></li>
+                }
+                else
+                {
+                    <li>@Html.ActionLink("Natrag na korisnike", "Index", "Korisnik")</li>
+                }
             </ul>
         </nav>
     </header>
     <section class="body">
         <section class="form-section">
+            <div id="poruka">
+                <div id="poruka_zaglavlje">
+                    @if (TempData["dosaoSa"] == null)
+                    {
+                        <a href='@Url.Action("Index", "Korisnik")'>
+                            <span id="zatvori">&times;</span>
+                        </a>
+                    }
+                    else
+                    {
+                        <a href='@TempData["dosaoSa"]'>
+                            <span id="zatvori">&times;</span>
+                        </a>
+                    }
+                </div>
+                <div id="poruka_tekst"></div>
+            </div>
             <h1>@ViewBag.Title</h1>
-            @using (Html.BeginForm("DodajKorisnika", "Korisnik", FormMethod.Post, new { @class = "login-form" }))
+            @using (Ajax.BeginForm("DodajKorisnika", "Korisnik", ajaxOpt, new { @class = "login-form", enctype = "multipart/form-data" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.LabelFor(m => m.korisnicko_ime)
@@ -36,13 +68,12 @@
                 @Html.LabelFor(m => m.LozinkaUnos2)
                 @Html.EditorFor(m => m.LozinkaUnos2, new { htmlAttributes = new { @placeholder = "Ponovite lozinku..." } })
                 @Html.ValidationMessageFor(m => m.LozinkaUnos2, "", new { @class = "validacija" })<br />
-                @Html.LabelFor(m => m.ovlast_sifra)<br />
-                @Html.DropDownListFor(m => m.ovlast_sifra,
-                                                    new SelectList(ViewBag.Ovlasti, "Sifra", "Naziv", ""), "Odaberite ovlast")
-                @Html.ValidationMessageFor(m => m.ovlast_sifra, "", new { @class = "validacija" })
-                <!---Html.LabelFor(m => m.image)
-        <input type="file" name="image" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" />-->
-                <button name="dodajKor" type="submit">
+                @Html.LabelFor(m => m.upis_ovlast)<br />
+                @Html.DropDownListFor(m => m.upis_ovlast, new SelectList(ViewBag.Ovlasti), "Odaberite ovlast")
+                @Html.ValidationMessageFor(m => m.upis_ovlast, "", new { @class = "validacija" })<br />
+                @Html.Label("Profilna slika")<br />
+                <input type="file" name="file" id="file" accept=".png,.jpg,.jpeg,.gif,.tif" />
+                <button name="dodajKor" type="submit" id="dodajKor">
                     Dodaj
                 </button>
             }
@@ -50,6 +81,30 @@
     </section>
 </body>
 </html>
+<script type="text/javascript">
+    function prozor() {
+            var poruka = document.getElementById("poruka");
+        document.getElementById("poruka_tekst").innerHTML = "<span id='kvacica'>&#x2714;</span> <br> Korisnik uspješno dodan!";
+        poruka.classList.add("fadein");
+        poruka.style.zIndex = 3;
+        var sakrij = document.getElementById("sakrij");
+        sakrij.setAttribute("class", "sakrij");
+        var tipka = document.getElementById("dodajKor");
+        tipka.disabled = "disabled";
+    }
+
+    function prozorFail() {
+        var poruka = document.getElementById("poruka");
+        document.getElementById("poruka_tekst").innerHTML = "<span id='x-brisi'>&times;</span> <br> Korisničko ime već postoji!";
+        poruka.classList.add("fadein");
+        poruka.style.zIndex = 3;
+        var sakrij = document.getElementById("sakrij");
+        sakrij.setAttribute("class", "sakrij");
+        var tipka = document.getElementById("dodajKor");
+        tipka.disabled = "disabled";
+    }
+
+</script>
 
 @Styles.Render("/Content/style.css")
 @Scripts.Render("~/bundles/jquery")
